<resources>
    <string name="app_name">Travel Partner</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="all_location">See all the Locations </string>
    <string name="contact_info">Contact Information :</string>
    <string name="phone">Phone: +8801773642161</string>
    <string name="email">Email: sohel.hafizurrahman@gmail.com</string>
    <string name="address">Address: Suffix IT, Cha-70, Rupayan Millennium Square, Level# 9A, 70/A Progoti Sharoni, Dhaka 1212</string>
    <string name="thankYouMessage">"ট্রাভেল পার্টনার ব্যবহার করার জন্য ধন্যবাদ। আপনার পরবর্তী ভ্রমণে আমরা আপনার সঙ্গী হতে চাই! 🚀"</string>
    <string name="contactInfo">"📧 ইমেইল: support@travelpartner.com\n🌐 ওয়েবসাইট: www.travelpartner.com\n📱 সোশ্যাল মিডিয়া: https://www.facebook.com/TravelPartnerApp"</string>
    <string name="about_us_description">"ট্রাভেল পার্টনার একটি আধুনিক এবং ব্যবহারকারীর জন্য উপযোগী মোবাইল অ্যাপ যা আপনাকে বাংলাদেশ ও বিশ্বব্যাপী বিভিন্ন পর্যটন স্থল সম্পর্কে জানাতে সাহায্য করে। আমাদের লক্ষ্য হলো, ভ্রমণপ্রেমীদের জন্য সহজ, সুবিধাজনক এবং সাশ্রয়ী ভ্রমণ অভিজ্ঞতা প্রদান করা।
            এই অ্যাপের মাধ্যমে আপনি আপনার গন্তব্য নির্বাচন, হোটেল বুকিং, রেস্তোরাঁ এবং অন্যান্য ভ্রমণ সুবিধা সম্পর্কে তথ্য পেতে পারবেন। এছাড়াও, আমাদের প্ল্যাটফর্ম আপনাকে নতুন স্থানে ভ্রমণ করার জন্য পরামর্শ এবং দিকনির্দেশনা প্রদান করে, যা আপনার ভ্রমণকে আরো আনন্দদায়ক এবং স্মরণীয় করে তোলে।
            আমরা বিশ্বাস করি, "ভ্রমণ একটি অভিজ্ঞতা, যা শেয়ার করা উচিত", এবং সেই জন্য আমরা আমাদের ব্যবহারকারীদের জন্য এমন একটি প্ল্যাটফর্ম তৈরি করেছি যা তাদের ভ্রমণযাত্রা আরো সহজ এবং স্মরণীয় করে তোলে।"</string>
    <string name="contactTitle">"যোগাযোগ করুন:"</string>
    <string name="featuresTitle">"অ্যাপের সুবিধাসমূহ"</string>
    <string name="noticeText">"Enjoy exploring the beauty of Bangladesh! Discover destinations, nature, and cultural wonders across the country!"</string>
    <string name="featuresList">"✔ লোকেশন ফিল্টার: বিভাগ, জেলা ও উপজেলার ভিত্তিতে গন্তব্য খুঁজুন।\n✔ রিয়েল-টাইম তথ্য: নির্ভরযোগ্য তথ্যসহ গন্তব্যের ছবি, নাম ও ঠিকানা দেখুন।\n✔ ব্যক্তিগতকৃত অভিজ্ঞতা: আপনার পছন্দের স্থানগুলো খুঁজে পাওয়ার জন্য সহজ ও ব্যবহারবান্ধব ইন্টারফেস।"</string>
    <string name="aboutUsDescription">"স্বাগতম ট্রাভেল পার্টনার-এ! আপনার ভ্রমণ পরিকল্পনা ও গন্তব্য আবিষ্কারের জন্য এটি একটি নির্ভরযোগ্য এবং সহজ সমাধান। আমরা আপনাকে ভ্রমণের প্রতিটি ধাপকে সহজ, সুন্দর এবং স্মরণীয় করে তুলতে সাহায্য করতে এখানে আছি..."</string>


    <string-array name="others">
        <item>Option 1</item>
        <item>Option 2</item>
        <item>Option 3</item>
    </string-array>

</resources>
